Set fixed cell size for list views in multi-column list view
This change adds a CSS style rule to ensure the fixed cell size for list views inside the multi-column list view is reset to the default (-1). It resolves potential layout issues and helps maintain consistent rendering.

--- a/gemsfx-demo/src/main/resources/com/dlsc/gemsfx/demo/atlantafx.css
+++ b/gemsfx-demo/src/main/resources/com/dlsc/gemsfx/demo/atlantafx.css
@@ -7,6 +7,10 @@
 .multi-column-list-view > .grid-pane {
 }
 
+.multi-column-list-view > .grid-pane > .list-view {
+    -fx-fixed-cell-size: -1;
+}
+
 .multi-column-list-view > .grid-pane > .list-view .column-list-cell {
 }
 
